it works somehow

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"preinstall": "npx only-allow pnpm",
 		"postinstall": "electron-builder install-app-deps",
 		"build": "node esbuilder.js --build",
-		"start": "node esbuilder.js && electron .",
+		"start": "node esbuilder.js && electron . --no-sandbox",
 		"watch": "node esbuilder.js --watch",
 		"dev": "concurrently --kill-others \"node esbuilder.js --watch\" \"electron .\"",
 		"testbuild": "pnpm run build && electron .",
@@ -36,10 +36,10 @@
 	},
 	"devDependencies": {
 		"concurrently": "^8.2.2",
-		"conventional-changelog-cli": "^3.0.0",
-		"electron": "10.4.7",
-		"electron-builder": "23.6.0",
-		"esbuild": "^0.18.20",
+		"conventional-changelog-cli": "^4.1.0",
+		"electron": "28.2.0",
+		"electron-builder": "24.9.1",
+		"esbuild": "^0.19.12",
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb-typescript": "^17.1.0",
 		"eslint-config-raven": "^1.0.3",
